# gamebot

./: .gitignore  .pre-commit-config.yaml  AndukovAlmazCV.html  Dockerfile  cv.html  docker-compose.yml  pyproject.toml
gameclub/: __main__.py  bot.py  config.py  db.py  gamebot.db  main.py  markups.py  messages_text.py
gameclub/bookings_dumps/: 05.03.2024.xlsx  20.03.2024.xlsx  23.03.2024.xlsx
